Add empty document list if doesn't exist