@@ -57,9 +57,9 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.lang3.StringUtils.defaultIfEmpty;
 import static org.elasticsearch.index.query.QueryBuilders.boolQuery;
+import static org.springframework.util.CollectionUtils.isEmpty;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.MAX_ES_SIZE;
 import static uk.gov.hmcts.ecm.common.model.helper.TribunalOffice.getCaseTypeId;
 import static uk.gov.hmcts.reform.et.syaapi.constants.EtSyaConstants.ACAS_VISIBLE_DOCS;
@@ -441,7 +441,7 @@ public class CaseService {
                                                 d.getValue().getTypeOfDocument(),
                                                 ""
                                             )))
-                                            .collect(toList()));
+                                            .toList());
 
             if (caseData.getClaimantRequests() != null
                 && caseData.getClaimantRequests().getClaimDescriptionDocument() != null) {
@@ -575,6 +575,9 @@ public class CaseService {
             multipartResponsePdf
         );
 
+        if (isEmpty(caseData.getDocumentCollection())) {
+            caseData.setDocumentCollection(new ArrayList<>());
+        }
         var docCollection = caseData.getDocumentCollection();
         docCollection.add(responsePdf);
     }
